2001-12-04  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02609]
	* proto.h: remove duplicate prototypes

2001-12-04  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02608]
	* local.c (localcgi_get): request == NULL means no ? in URL
	* url.c (openURL): ditto

2001-12-03  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02606]
	* XMakefile (install-scripts): run pwd outside for loop

2001-12-03  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02605] $(PWD) / allocStr()
	
	* XMakefile (install-scripts): use $$TOPDIR instead of $(PWD)

	* indep.c (allocStr): if len is negative, it will copy string in `s'
	* display.c (record_err_message): pass -1 as length to allocStr
	* etc.c (lastFileName): ditto
	* etc.c (mybasename): ditto
	* etc.c (FQDN): ditto
	* file.c (push_tag): ditto
	* func.c (addKeyList): ditto
	* history.c (unshiftHist): ditto
	* history.c (pushHist): ditto
	* indep.c (cleanupName): ditto
	* linein.c (inputLineHist): ditto
	* local.c (dirBuffer): ditto
	* main.c (gotoLabel): ditto
	* main.c (searchKeyData): ditto
	* parsetagx.c (parsedtag_set_value): ditto
	* terms.c (GETSTR): ditto
	* textlist.h (pushText): ditto
	* url.c (DefaultFile): ditto
	* url.c (parseURL): ditto
	* url.c (ALLOC_STR): ditto
	* url.c (parseURL2): ditto
	* url.c (openURL): ditto
	* w3mhelperpanel.c (extractMailcapEntry): ditto

2001-12-02  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02604]
	* configure: kanji_symbols=n if lang=EN
	* file.c (HTMLlineproc2body): initialize rule

2001-12-02  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02603]
	* scripts/w3mhelp.cgi.in: modified for perl4

2001-12-01  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02601]
	* Makefile (install-core): added
	* Makefile (install-helpfile): added
	* configure (use_help_cgi): default yes if perl found
	* configure (config.h): add HELP_CGI
	* configure (config.h): add $def_use_help_cgi
	* main.c (ldhelp): add USE_HELP_CGI code
	* scripts/Makefile: use w3mhelp*.pl.in