@@ -1,4 +1,4 @@
-/* $Id: func.c,v 1.5 2001/12/02 16:26:08 ukai Exp $ */
+/* $Id: func.c,v 1.6 2001/12/03 18:29:37 ukai Exp $ */
 /*
  * w3m func.c
  */
@@ -322,10 +322,8 @@ getQWord(char **str)
 		    *e++ = '\\';
 	    }
 	    else {
-		if (*p != '\\' && *p != '\'' &&	/* ..\\.., *
-						 * ..\'..  */
-		    *p != '"' && !IS_SPACE(*p))	/* ..\".., * ..\.. 
-						 */
+		if (*p != '\\' && *p != '\'' &&	/* ..\\.., ..\'.. */
+		    *p != '"' && !IS_SPACE(*p))	/* ..\".., ..\.. */
 		    *e++ = '\\';
 	    }
 	    *e++ = *p;
